--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
     PLAYERS_TABLE: '${self:service}-players-${opt:stage, self:provider.stage}'
     GAMES_TABLE: '${self:service}-games-${opt:stage, self:provider.stage}'
     GAME_EVENTS_TABLE: '${self:service}-gameEvents-${opt:stage, self:provider.stage}'
+    LEAGUES_TABLE: '${self:service}-leagues-${opt:stage, self:provider.stage}'
   httpApi:
     cors:
       allowedOrigins:
@@ -64,6 +65,7 @@ custom:
     playes: ${self:provider.environment.PLAYERS_TABLE}
     games: ${self:provider.environment.GAMES_TABLE}
     gameEvents: ${self:provider.environment.GAME_EVENTS_TABLE}
+    leagues: ${self:provider.environment.LEAGUES_TABLE}
   endpoints:
     dynamodb: 'http://${self:custom.dynamodb.start.host}:${self:custom.dynamodb.start.port}'
   database:
