--- a/infrastructure/resources/app.yml
+++ b/infrastructure/resources/app.yml
@@ -34,20 +34,20 @@ Resources:
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
-      KeySchema:
-        - AttributeName: id
-          KeyType: HASH
-      BillingMode: PAY_PER_REQUEST
-  PlayersTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: ${self:provider.environment.PLAYERS_TABLE}
-      AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: leagueId
           AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: ${self:provider.environment.LEAGUE_ID_INDEX}
+          KeySchema:
+            - AttributeName: leagueId
+              KeyType: HASH
+            - AttributeName: id
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
   GamesTable:
     Type: AWS::DynamoDB::Table
@@ -56,9 +56,20 @@ Resources:
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
+        - AttributeName: leagueId
+          AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: ${self:provider.environment.LEAGUE_ID_INDEX}
+          KeySchema:
+            - AttributeName: leagueId
+              KeyType: HASH
+            - AttributeName: id
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
   GameEventsTable:
     Type: AWS::DynamoDB::Table
@@ -67,9 +78,20 @@ Resources:
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
+        - AttributeName: leagueId
+          AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: ${self:provider.environment.LEAGUE_ID_INDEX}
+          KeySchema:
+            - AttributeName: leagueId
+              KeyType: HASH
+            - AttributeName: id
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
   LeaguesTable:
     Type: AWS::DynamoDB::Table
