--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.6.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid-by-string": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
