--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "allowJs": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@model": ["libs/handball-analyzer-model"]
+    }
   }
 }
