--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1272.0",
+    "axios": "^1.2.2",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -47,6 +49,7 @@
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.2.1",
     "@types/aws-lambda": "^8.10.109",
+    "@types/cheerio": "^0.22.31",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
