--- a/serverless.yml
+++ b/serverless.yml
@@ -40,6 +40,8 @@ provider:
             - dynamodb:PutItem
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
+            - dynamodb:BatchGetItem
+            - dynamodb:BatchWriteItem
           Resource: '*'
 
 plugins:
