--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.6.0",
     "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0",
     "uuid-by-string": "^4.0.0"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.12",
     "@types/pdf-parse": "^1.1.1",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "chalk": "5",
